# Kaitai-introduction

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindIconv.cmake
doc/: kaitai.key
kaitai/: kaitaistream.cpp  kaitaistruct.h
res/: dogs.arec  fido.arec
specs/: animal_record_single.ksy  animal_records.ksy
src/: main.cpp
